# amazon-reviews-sentinent-analysis

./: 1_data_loading.sh  2_data_preparation.ipynb  3.1_analysis.ipynb  3.1_aspects.ipynb  3.1_polarity.ipynb  3.2_analysis.ipynb  3.3_analysis.ipynb  3.4_prediction.ipynb  3_analysis.ipynb  README.md  install_data.txt  notebook.ipynb  pyproject.toml  question1.ipynb  text_anlaysis.ipynb
