[tool.poetry]
name = "tu-dopp-ws23"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.3"
pandas = "^2.1.4"
pyspark = {extras = ["connect"], version = "^3.5.0"}
seaborn = "^0.13.1"
ipykernel = "^6.28.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
